# ai-sales-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_MEMORY.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5f6299078b46_initial_schema.py
backend/app/: celery_app.py  config.py  database.py  dependencies.py  logging.py  main.py
backend/app/ai/: provider.py  schemas.py
backend/app/ai/prompts/: check_completion.xml  check_transition.xml  generate_response.xml  loader.py
backend/app/ai/providers/: openai_provider.py
backend/app/analytics/: router.py  schemas.py  service.py
backend/app/auth/: models.py  router.py  schemas.py  security.py  service.py
backend/app/channel/: base.py  registry.py  web_chat.py
backend/app/chat/: models.py  router.py  schemas.py  service.py  tasks.py  ws_manager.py
backend/app/cli/: __main__.py  install.py
backend/app/common/: exceptions.py  pagination.py  schemas.py
backend/app/flow/: engine.py  models.py  router.py  schemas.py  service.py  test_chat_router.py
backend/app/health/: router.py
backend/app/rag/: embedder.py  models.py  router.py  schemas.py  service.py
backend/app/settings/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_auth.py  test_context.py  test_engine.py  test_flow_crud.py
docs/: ai-integration.md  api-spec.md  architecture.md  contributing.md  data-models.md  infrastructure.md  testing-ci.md  transactions.md
frontend/: nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/api/endpoints/: auth.ts  chat.ts  flow.ts  settings.ts
frontend/src/api/types/: auth.ts  chat.ts  common.ts  flow.ts  settings.ts
(+23 files in other folders)
